# care-sphere-core

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py  auth.py
app/services/auth/: auth_service.py
app/services/email/: service.py
app/services/users/: users_service.py
app/templates/emails/: base.html  reset_password.html  welcome.html
app/workers/: celery_app.py
app/workers/tasks/: email_tasks.py
migrations/: env.py
migrations/versions/: a4b901920a14_initial_migration.py
